--- a/playbooks/task2/2.debag.gather_facts.yml
+++ b/playbooks/task2/2.debag.gather_facts.yml
@@ -6,10 +6,10 @@
   tasks:
 # Example that prints the loopback address and gateway for each host
   - debug:
-      msg: "System {{ inventory_hostname }} has uuid {{ ansible_product_uuid }}"
+    !  msg: "System {{ ansible_hostname }} has uuid {{ ansible_product_uuid }}"
 
   - debug:
-      msg: "System {{ inventory_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
+      msg: "System {{ ansible_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
     when: ansible_default_ipv4.gateway is defined
 
   - shell: /usr/bin/uptime
@@ -20,6 +20,8 @@
       var: result
       verbosity: 2
 
+
+#вариант вербосити 4 и 2, если пользователь вбил другую вербосити он его пропустит
   - name: Display all variables/facts known for a host only for verbocity -vvvv
     debug:
       var: hostvars[inventory_hostname]
