--- a/playbooks/task2/3.service_facts.all.yml
+++ b/playbooks/task2/3.service_facts.all.yml
@@ -4,10 +4,13 @@
   #become: yes
   gather_facts: yes
   tasks:
+    #собирает факты
   - name: Populate service facts
     service_facts:
-
+# выводит факты
   - name: Print service facts
     ansible.builtin.debug:
       var: ansible_facts.services
       verbosity: 2
+
+#сбро фактов о состоянии служб в системе
