--- a/playbooks/task6new/1.ta.yml
+++ b/playbooks/task6new/1.ta.yml
@@ -5,6 +5,10 @@
   #become: yes
   gather_facts: yes
   tasks:
+  - yum:
+      name: libselinux-python3
+      state: present
+      update_cache: true
   - name: Distribution
     debug:
       var: ansible_facts
