--- a/playbooks/task6new/1.ta.yml
+++ b/playbooks/task6new/1.ta.yml
@@ -8,6 +8,8 @@
   - name: Distribution
     debug:
       var: ansible_facts
+  - shell: mount |grep /dev/vd |awk '{print $5}'
+    register: file_system
   - template:
      src: '../../templates/test.txt'
      dest: /tmp/test.txt
