--- a/playbooks/task1/dev.yml
+++ b/playbooks/task1/dev.yml
@@ -9,10 +9,10 @@
     ping:
 
  #все сервера
-- name: ping
-  hosts: all
+#- name: ping
+#  hosts: all
   #become: yes
-  gather_facts: yes
-  tasks:
-  - name: ping
-    ping:
+#  gather_facts: yes
+#  tasks:
+#  - name: ping
+#    ping:
